# BSH

./: .gitignore  CMakeLists.txt  README.md
src/: auto.c  builtins.c  builtins.cpp  config.cpp  error.cpp  exec.cpp  git.cpp  history.c  history.cpp  input.cpp  main.c  main.cpp  parse.c  parser.cpp  utils.c  utils.cpp
src/data/: arguments.cpp  config.cpp
src/include/: auto.h  builtins.h  exec.h  git.h  global.h  history.h  input.h  parse.h  parser.h  serror.h  utils.h
src/include/data/: arguments.h  config.h
